# mediamon

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  README.md  docker-compose.yaml  dockerfile  sonar-project.properties  yt-dlp_linux
gallery-dl/: config.json.example
migrations/: 20231128121512_image.sql  20231128152656_video.sql  20231128153244_tags.sql  20231128181556_load_tags.sql
src/: api.rs  database.rs  deepbooru.rs  fingerprint.rs  gallerydl.rs  lib.rs  main.rs  media.rs  storage.rs  ytdlp.rs
