[package]
name = "mediamon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
image = "0.24.7"
image_hasher = "1.2.0"
ndarray = "0.15.6"
ort = "1.16.2"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "tls-rustls", "sqlite", "migrate"] }
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full"] }
